@@ -1,3 +1,4 @@
+* Manage named separator as label
 * Add MultiSelection entry to Dict field
 * Position new record based on order
 * Reset display_size of TreeView when group is cleared or changed
